Change the theme, add banner

--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -1,9 +1,6 @@
 ---
-layout: default
+layout: articles
+banner: '/assets/banner.png'
 ---
 
-<div class="home">
-
-  {{ content }}
-
-</div>
+{{ content }}
