--- a/docs/_includes/views/banner.html
+++ b/docs/_includes/views/banner.html
@@ -25,7 +25,7 @@
   {%- endif -%}
   <style>
     html .page-banner: {
-      height: {{ 420px }};
+      height: {{ 320px }};
     }
   </style>
   {%- if false -%}
@@ -77,6 +77,9 @@
     .custom-banner-class {
       height: 320px;
     }
+    .custom-paceholder {
+      height: 320px;
+    }
   </style>
   <section class="custom-banner-class">
     <div class="page-banner-img">
@@ -115,31 +118,8 @@
           })();
         </script>
       {%- else -%}
-        <div style="background-image: url({{ banner_image }})"></div>
-        <img class="img-placeholder" src="{{ banner_image }}">
+        <img class="custom-placeholder" src="{{ banner_image }}">
       {%- endif -%}
-    </div>
-    <div class="wrapper">
-      <div class="page-banner-inner">
-
-        {%- if banner_html -%}
-
-        {%- assign banner_html = 'views/' | append: banner_html -%}
-        {%- include {{ banner_html }} -%}
-
-        {%- else -%}
-
-          <div class="page-banner-default">
-            <h1 class="page-banner-heading">
-              {{ heading | default: page.title | escape }}
-            </h1>
-            <h2 class="page-banner-subheading">
-              {{ subheading | default: page.subtitle | escape }}
-            </h2>
-          </div>
-
-        {%- endif -%}
-      </div>
     </div>
   </section>
 {%- endif -%}
