Change banner width

--- a/docs/_includes/views/banner.html
+++ b/docs/_includes/views/banner.html
@@ -90,7 +90,7 @@
   </style>
   <section class="custom-banner-class">
     <div class="page-banner-img">
-      <img class="custom-placeholder" style="height: 320px" src="{{ banner_image }}">
+      <img class="custom-placeholder" style="width: 920px" src="{{ banner_image }}">
     </div>
   </section>
 {%- endif -%}
