--- a/docs/_includes/views/footer.html
+++ b/docs/_includes/views/footer.html
@@ -11,7 +11,7 @@
             | replace: '(p)', '℗'
             | replace: '(cleft)', '<span class="copyleft">&copy;</span>'
         -%}
-      <div>{{ copyright }}</div>
+      <div style="text-align: center">{{ copyright }}</div>
     </div>
   </div>
 </footer>
